<resources>
    <string name="app_name">Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="edit_todo_entries">Edit todo entries</string>
    <string name="delete_todo_item">Delete todo item</string>
    <string name="name">Ibrahim Olagoke</string>
    <string name="email">stata_testing@statainsight.com</string>
    <string name="age">Age</string>
    <string name="_25">25</string>
    <string name="current_diagnosis">Current Diagnosis</string>
    <string name="septic_embolization">Septic Embolization</string>
    <string name="date">20 April 2021</string>
    <string name="history_of_survey">History of Survey</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>