<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/layout_start_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/back_button"/>

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_24"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_todo_entries"/>

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_delete_24"
            android:layout_gravity="right"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/delete_todo_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_medium"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_start_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ibrahim"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/layout_start_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_first_level"
                    android:layout_marginTop="5dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color_first_level"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/email" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="80dp"
               android:layout_gravity="start"
               android:orientation="vertical"
               android:background="@drawable/white_curve_bk">

               <TextView
                   android:id="@+id/age1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="10dp"
                   android:fontFamily="@font/roboto_bold"
                   android:text="@string/_25"
                   android:textColor="@color/deep_gold"
                   android:textSize="22sp" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="8dp"
                   android:text="@string/age"
                   android:textSize="16sp"
                   android:fontFamily="@font/roboto_medium"
                   android:textColor="@color/text_color_second_level"/>
           </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:background="@drawable/white_curve_bk">

                <TextView
                    android:id="@+id/age2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_25"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/deep_gold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/age"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_color_second_level"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_gravity="end"
                android:background="@drawable/white_curve_bk">

                <TextView
                    android:id="@+id/age3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_25"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/deep_gold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/age"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_color_second_level"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_diagnosis"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="@dimen/layout_start_margin"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_currentDiagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_start_margin"
                android:layout_marginEnd="@dimen/layout_start_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/content_display"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_of_survey"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="@dimen/layout_start_margin"
                android:layout_marginTop="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_surveyHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_start_margin"
                android:layout_marginEnd="@dimen/layout_start_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/content_display"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vector"
        android:background="@color/deep_gold"
        app:backgroundTintMode="src_atop"
        app:backgroundTint="@color/deep_gold"
        android:layout_gravity="center_horizontal|bottom"/>
</FrameLayout>